<resources>
    <string name="app_name">COVID-19 Vaccination Tracker</string>
    <string name="start">Start</string>
    <string name="vaccination_status">Vaccination status</string>
    <string name="population">Population</string>
    <string name="total_cases">Total cases</string>
    <string name="last_update">Last update</string>
    <string name="total_vaccinations">Total vaccinations</string>
    <string name="people_fully_vaccinated">Fully vaccinated</string>
    <string name="people_vaccinated">First vaccine shot</string>
    <string name="new_cases">New cases</string>
    <string name="total_deaths">Total deaths</string>
    <string name="new_deaths">New deaths</string>
    <string name="active_cases">Estimated active cases</string>
    <string name="no_data">No data</string>
    <string name="ExitToast">Press again to exit app</string>
    <string name="sorted_by_name">Sorted by name</string>
    <string name="sorted_by_population">Sorted by population</string>
    <string name="_7_day_average">7-day average</string>
    <string name="you_have_no_countries_saved_in_your_favourites_yet">No countries saved yet.\nTap and hold a country to add or remove it</string>
    <string name="index" translatable="false">. . . . . . . . . . . . . . . . . . . . .</string>
    <string name="infection_status">Infection status</string>
    <string name="January">January</string>
    <string name="February">February</string>
    <string name="March">March</string>
    <string name="April">April</string>
    <string name="May">May</string>
    <string name="June">June</string>
    <string name="July">July</string>
    <string name="August">August</string>
    <string name="September">September</string>
    <string name="October">October</string>
    <string name="November">November</string>
    <string name="December">December</string>
    <string name="Percentage_fully_vaccinated">% are fully vaccinated</string>
    <string name="Percentage_first_vaccine">% with at least one vaccine shot</string>
    <string name="at_the_moment_there_is_no_data_available_for_this_country">At the moment there is no data available for this country</string>
    <string name="Removed_from_favourites">Removed from favourites:</string>
    <string name="Added_to_favourites">Added to favourites:</string>
    <string name="No_data">No data</string>
    <string name="connection_failed">Connection failed. Please check your internet connection. Old data displayed</string>
    <string name="Afghanistan">Afghanistan</string>
    <string name="Albania">Albania</string>
    <string name="Algeria">Algeria</string>
    <string name="AmericanSamoa">American Samoa</string>
    <string name="Angola">Angola</string>
    <string name="Anguilla">Anguilla</string>
    <string name="Antarctica">Antarctica</string>
    <string name="AntiguaandBarbuda">Antigua and Barbuda</string>
    <string name="Argentina">Argentina</string>
    <string name="Armenia">Armenia</string>
    <string name="Aruba">Aruba</string>
    <string name="Australia">Australia</string>
    <string name="Austria">Austria</string>
    <string name="Azerbaijan">Azerbaijan</string>
    <string name="Bahamas">Bahamas</string>
    <string name="Bahrain">Bahrain</string>
    <string name="Bangladesh">Bangladesh</string>
    <string name="Barbados">Barbados</string>
    <string name="Belarus">Belarus</string>
    <string name="Belgium">Belgium</string>
    <string name="Belize">Belize</string>
    <string name="Benin">Benin</string>
    <string name="Bermuda">Bermuda</string>
    <string name="Bhutan">Bhutan</string>
    <string name="Bolivia">Bolivia</string>
    <string name="BosniaandHerzegovina">Bosnia and Herzegovina</string>
    <string name="Botswana">Botswana</string>
    <string name="BouvetIsland">Bouvet Island</string>
    <string name="Brazil">Brazil</string>
    <string name="BruneiDarussalam">Brunei</string>
    <string name="Bulgaria">Bulgaria</string>
    <string name="BurkinaFaso">Burkina Faso</string>
    <string name="Burundi">Burundi</string>
    <string name="Cambodia">Cambodia</string>
    <string name="Cameroon">Cameroon</string>
    <string name="Canada">Canada</string>
    <string name="CapeVerde">Cape Verde</string>
    <string name="CaymanIslands">Cayman Islands</string>
    <string name="CentralAfricanRepublic">Central African Republic</string>
    <string name="Chad">Chad</string>
    <string name="Chile">Chile</string>
    <string name="China">China</string>
    <string name="ChristmasIsland">Christmas Island</string>
    <string name="CocosIslands">Cocos (Keeling) Islands</string>
    <string name="Colombia">Colombia</string>
    <string name="Comoros">Comoros</string>
    <string name="Congo">Congo</string>
    <string name="DRCongoe">DR Congo</string>
    <string name="CookIslands">Cook Islands</string>
    <string name="CostaRica">Costa Rica</string>
    <string name="CoteDIvoire">Cote d\'Ivoire</string>
    <string name="Croatia">Croatia</string>
    <string name="Cuba">Cuba</string>
    <string name="Cyprus">Cyprus</string>
    <string name="CzechRepublic">Czech Republic</string>
    <string name="Denmark">Denmark</string>
    <string name="Djibouti">Djibouti</string>
    <string name="Dominica">Dominica</string>
    <string name="DominicanRepublic">Dominican Republic</string>
    <string name="EastTimor">Timor-Leste</string>
    <string name="Ecuador">Ecuador</string>
    <string name="Egypt">Egypt</string>
    <string name="ElSalvador">El Salvador</string>
    <string name="EquatorialGuinea">Equatorial Guinea</string>
    <string name="Eritrea">Eritrea</string>
    <string name="Estonia">Estonia</string>
    <string name="Eswatini">Eswatini</string>
    <string name="Ethiopia">Ethiopia</string>
    <string name="FalklandIslands">Falkland Islands (Malvinas)</string>
    <string name="FaroeIslands">Faroe Islands</string>
    <string name="Fiji">Fiji</string>
    <string name="Finland">Finland</string>
    <string name="France">France</string>
    <string name="FrenchGuiana">French Guiana</string>
    <string name="FrenchPolynesia">French Polynesia</string>
    <string name="Gabon">Gabon</string>
    <string name="Gambia">Gambia</string>
    <string name="Georgia">Georgia</string>
    <string name="Germany">Germany</string>
    <string name="Ghana">Ghana</string>
    <string name="Gibraltar">Gibraltar</string>
    <string name="Greece">Greece</string>
    <string name="Greenland">Greenland</string>
    <string name="Grenada">Grenada</string>
    <string name="Guadeloupe">Guadeloupe</string>
    <string name="Guam">Guam</string>
    <string name="Guatemala">Guatemala</string>
    <string name="Guinea">Guinea</string>
    <string name="GuineaBissau">Guinea-Bissau</string>
    <string name="Guyana">Guyana</string>
    <string name="Haiti">Haiti</string>
    <string name="Honduras">Honduras</string>
    <string name="HongKong">Hong Kong</string>
    <string name="Hungary">Hungary</string>
    <string name="Iceland">Iceland</string>
    <string name="India">India</string>
    <string name="Indonesia">Indonesia</string>
    <string name="Iran">Iran</string>
    <string name="Iraq">Iraq</string>
    <string name="Ireland">Ireland</string>
    <string name="Israel">Israel</string>
    <string name="Italy">Italy</string>
    <string name="Jamaica">Jamaica</string>
    <string name="Japan">Japan</string>
    <string name="Jordan">Jordan</string>
    <string name="Kazakhstan">Kazakhstan</string>
    <string name="Kenya">Kenya</string>
    <string name="Kiribati">Kiribati</string>
    <string name="NorthKorea">North Korea</string>
    <string name="SouthKorea">South Korea</string>
    <string name="Kuwait">Kuwait</string>
    <string name="Kyrgyzstan">Kyrgyzstan</string>
    <string name="Laos">Laos</string>
    <string name="Latvia">Latvia</string>
    <string name="Lebanon">Lebanon</string>
    <string name="Lesotho">Lesotho</string>
    <string name="Liberia">Liberia</string>
    <string name="Libya">Libya</string>
    <string name="Liechtenstein">Liechtenstein</string>
    <string name="Lithuania">Lithuania</string>
    <string name="Luxembourg">Luxembourg</string>
    <string name="Macau">Macau</string>
    <string name="NorthMacedonia">North Macedonia</string>
    <string name="Madagascar">Madagascar</string>
    <string name="Malawi">Malawi</string>
    <string name="Malaysia">Malaysia</string>
    <string name="Maldives">Maldives</string>
    <string name="Mali">Mali</string>
    <string name="Malta">Malta</string>
    <string name="MarshallIslands">Marshall Islands</string>
    <string name="Martinique">Martinique</string>
    <string name="Mauritania">Mauritania</string>
    <string name="Mauritius">Mauritius</string>
    <string name="Mayotte">Mayotte</string>
    <string name="Mexico">Mexico</string>
    <string name="Micronesia">Micronesia</string>
    <string name="Moldova">Moldova</string>
    <string name="Monaco">Monaco</string>
    <string name="Mongolia">Mongolia</string>
    <string name="Montenegro">Montenegro</string>
    <string name="Montserrat">Montserrat</string>
    <string name="Morocco">Morocco</string>
    <string name="Mozambique">Mozambique</string>
    <string name="Myanmar">Myanmar</string>
    <string name="Namibia">Namibia</string>
    <string name="Nauru">Nauru</string>
    <string name="Nepal">Nepal</string>
    <string name="Netherlands">Netherlands</string>
    <string name="NetherlandsAntilles">Netherlands Antilles</string>
    <string name="NewCaledonia">New Caledonia</string>
    <string name="NewZealand">New Zealand</string>
    <string name="Nicaragua">Nicaragua</string>
    <string name="Niger">Niger</string>
    <string name="Nigeria">Nigeria</string>
    <string name="Niue">Niue</string>
    <string name="NorfolkIsland">Norfolk Island</string>
    <string name="NorthernMarianaIslands">Northern Mariana Islands</string>
    <string name="Norway">Norway</string>
    <string name="Oman">Oman</string>
    <string name="Pakistan">Pakistan</string>
    <string name="Palau">Palau</string>
    <string name="Panama">Panama</string>
    <string name="PapuaNewGuinea">Papua New Guinea</string>
    <string name="Paraguay">Paraguay</string>
    <string name="Peru">Peru</string>
    <string name="Philippines">Philippines</string>
    <string name="Pitcairn">Pitcairn</string>
    <string name="Poland">Poland</string>
    <string name="Portugal">Portugal</string>
    <string name="PuertoRico">Puerto Rico</string>
    <string name="Qatar">Qatar</string>
    <string name="Reunion">Reunion</string>
    <string name="Romania">Romania</string>
    <string name="Russia">Russia</string>
    <string name="Rwanda">Rwanda</string>
    <string name="SaintKittsandNevis">Saint Kitts and Nevis</string>
    <string name="SaintLucia">Saint Lucia</string>
    <string name="SaintVincentandtheGrenadines">Saint Vincent and the Grenadines</string>
    <string name="Samoa">Samoa</string>
    <string name="SanMarino">San Marino</string>
    <string name="SaudiArabia">Saudi Arabia</string>
    <string name="Senegal">Senegal</string>
    <string name="Serbia">Serbia</string>
    <string name="Seychelles">Seychelles</string>
    <string name="SierraLeone">Sierra Leone</string>
    <string name="Singapore">Singapore</string>
    <string name="ok">OK</string>
    <string name="sources">Sources</string>
    <string name="worldometers" translatable="false">- worldometers:</string>
    <string name="m_media_group" translatable="false">- M-Media-Group:</string>
    <string name="our_world_in_data" translatable="false">- Our World In Data:</string>
    <string name="https_mmediagroup_fr_covid_19" translatable="false">https://mmediagroup.fr/covid-19</string>
    <string name="https_www_worldometers_info_population" translatable="false">https://www.worldometers.info/population/</string>
    <string name="https_covid_ourworldindata_org" translatable="false">https://covid.ourworldindata.org/</string>
</resources>